welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:11: error: value avance is not a member of Unit
		case "E" =>gauche();avance()avance();avance();avance();
                                            ^BDR2:12: error: value avance is not a member of Unit
		case "F" =>gauche();avance()avance();avance();avance();avance();
                                            ^